ECA-11620 - Normalize the CMP Configuration page according to UX design conventions